--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Visual banking app</title>
+    <title>Virtual banking app</title>
     <link
       href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
       rel="stylesheet"
@@ -22,15 +22,35 @@
         >
           <h1 class="title">Please type your information below</h1>
           <div class="account-info">
-            <input type="text" name="userEmail" placeholder="Email" />
-            <input type="text" name="userFirstName" placeholder="First name" />
-            <input type="text" name="userLastName" placeholder="Last name" />
+            <input
+              type="text"
+              name="userEmail"
+              placeholder="Email"
+              value="sssssss@ssssss"
+              required=""
+            />
+            <input
+              type="text"
+              name="userFirstName"
+              placeholder="First name"
+              value="ssssssssssss"
+              required=""
+            />
+            <input
+              type="text"
+              name="userLastName"
+              placeholder="Last name"
+              value="ssssssssss"
+              required=""
+            />
           </div>
           <div class="first-deposit">
             <input
               type="number"
               name="userFirstDeposit"
               placeholder="Enter your first deposit"
+              value="5555"
+              required=""
             />
           </div>
           <div class="form-group">
