--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="target">
-      <!-- page0 -->
+    <!-- page0 -->
+    <div id="initial-form">
       <div id="page0">
         <form
           class="create-account-form"
           onsubmit="initializeUserAccount();
-          event.preventDefault()"
+            event.preventDefault()"
         >
           <h1 class="title">Please type your information below</h1>
           <div class="account-info">
@@ -85,9 +85,10 @@
           <input class="submit-button" type="submit" value="Submit" />
         </form>
       </div>
-      <!-- page0 -->
-      <!-- page1 -->
-      <!-- <div id="page1">
+    </div>
+    <!-- page0 -->
+    <!-- page1 -->
+    <!-- <div id="page1">
         <form class="login-form">
           <h1 class="title">Please type your information below</h1>
           <div class="name">
@@ -107,9 +108,10 @@
           <input class="submit-button" type="submit" value="Submit" />
         </form>
       </div> -->
-      <!-- page1 -->
-      <!-- page2 -->
-      <!-- <div id="page2">
+    <!-- page1 -->
+    <div id="bankPage"></div>
+    <!-- page2 -->
+    <!-- <div id="page2">
         <div class="user-top">
           <div class="user-info">
             <p class="user-name">Your Name: Kaiden Herman</p>
@@ -136,9 +138,10 @@
           </div>
         </div>
       </div> -->
-      <!-- page2 -->
-      <!-- page3 -->
-      <!-- <div id="page3">
+    <!-- page2 -->
+    <div id="sidePage"></div>
+    <!-- page3 -->
+    <!-- <div id="page3">
         <div class="withdrawal-page">
           <div class="withdrawal-title">
             <h1 class="">Please Enter The Withdrawal Amount</h1>
@@ -178,9 +181,9 @@
           </div>
         </div>
       </div> -->
-      <!-- page3 -->
-      <!-- page4 -->
-      <!-- <div id="page4">
+    <!-- page3 -->
+    <!-- page4 -->
+    <!-- <div id="page4">
         <div class="confirmation-page">
           <div class="confirmation-title">
             <h1 class="">The money you are going to take is ...</h1>
@@ -211,9 +214,9 @@
           </div>
         </div>
       </div> -->
-      <!-- page4 -->
-      <!-- page5 -->
-      <!-- <div id="page5">
+    <!-- page4 -->
+    <!-- page5 -->
+    <!-- <div id="page5">
         <div class="deposit-page">
           <div class="deposit-title">
             <h1 class="">Please Enter The Deposit Amount</h1>
@@ -227,9 +230,9 @@
           </div>
         </div>
       </div> -->
-      <!-- page5 -->
-      <!-- page6 -->
-      <!-- <div id="page6">
+    <!-- page5 -->
+    <!-- page6 -->
+    <!-- <div id="page6">
         <div class="days-page">
           <div class="days-title">
             <h1 class="">How many days will you be gone?</h1>
@@ -243,8 +246,7 @@
           </div>
         </div>
       </div> -->
-      <!-- page6 -->
-    </div>
+    <!-- page6 -->
     <script src="script.js"></script>
   </body>
 </html>
