--- a/index.html
+++ b/index.html
@@ -149,34 +149,34 @@
           <div class="withdrawal-amount-selector">
             <div class="withdrawal-section">
               <p class="withdrawal-unit">$100</p>
-              <input type="number" name="100-dollar" value="5" />
+              <input type="number" class="bill-input" data-bill="100" name="100-dollar" value="0" />
             </div>
             <div class="withdrawal-section">
               <p class="withdrawal-unit">$50</p>
-              <input type="number" name="50-dollar" value="1" />
+              <input type="number" class="bill-input" data-bill="50" name="50-dollar" value="0" />
             </div>
             <div class="withdrawal-section">
               <p class="withdrawal-unit">$20</p>
-              <input type="number" name="20-dollar" value="2" />
+              <input type="number" class="bill-input" data-bill="20" name="20-dollar" value="0" />
             </div>
             <div class="withdrawal-section">
               <p class="withdrawal-unit">$10</p>
-              <input type="number" name="10-dollar" value="3" />
+              <input type="number" class="bill-input" data-bill="10" name="10-dollar" value="0" />
             </div>
             <div class="withdrawal-section">
               <p class="withdrawal-unit">$5</p>
-              <input type="number" name="5-dollar" value="1" />
+              <input type="number" class="bill-input" data-bill="5" name="5-dollar" value="0" />
             </div>
             <div class="withdrawal-section">
               <p class="withdrawal-unit">$1</p>
-              <input type="number" name="1-dollar" value="4" />
+              <input type="number" class="bill-input" data-bill="1" name="1-dollar" value="0" />
             </div>
           </div>
           <div class="total-amount">
             <p>$0.00</p>
           </div>
           <div class="next-page">
-            <button class="go-back">Go Back</button>
+            <button class="go-back back-btn">Go Back</button>
             <button class="next">Next</button>
           </div>
         </div>
